# TCPChat

./: BUILD_PROJECT.sh  CMakeLists.txt  README.md  readme.md
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
Server/UnitTests/: CMakeLists.txt  UnitTests[1]_include.cmake  UnitTests[1]_tests.cmake  chat_member_test.cpp  logger_test.cpp  socket_test.cpp
Server/include/: chat_member.h  logger.h  server.h  socket.h
Server/src/: CMakeLists.txt  chat_member.cpp  logger.cpp  main.cpp  server.cpp  socket.cpp
